<resources>
    <string name="app_name" translatable="false">Önder Grup</string>
    <string name="developer" translatable="false">Halil İbrahim Direktör</string>
    <string name="developer_mail" translatable="false">hidirektor@gmail.com</string>
    <string name="developer_phone" translatable="false">+90 (541) 741 03 09</string>
    <string name="developedby" translatable="false">Designed &amp; Developed by\nHalil İbrahim Direktör</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="welcome">Merhabalar</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Hesap Oluştur</string>
    <string name="next_btn">İlerle</string>
    <string name="forget_password">Şifremi Unuttum</string>
    <string name="rememberme">Beni Hatırla</string>
    <string name="skip">Atla</string>
    <string name="okay">Tamam</string>
    <string name="delete">Sil</string>
    <string name="deActivate">Pasifleştir</string>
    <string name="activate">Aktifleştir</string>
    <string name="edit">Düzenle</string>
    <string name="changerole">Rol Değiştir</string>
    <string name="button_profile">Profil</string>
    <string name="button_settings">Ayarlar</string>
    <string name="button_feedback">Bize Bildirin !</string>
    <string name="button_logout">Çıkış Yap</string>
    <string name="button_yes">Evet</string>
    <string name="button_no">Hayır</string>
    <string name="version_history">Versiyon Geçmişi</string>
    <string name="theme">Tema</string>
    <string name="button_tickets">Destek Talepleri</string>
    <string name="button_back">Geri Dön</string>
    <string name="change_password">Şifreni Değiştir</string>
    <string name="login_logs">Giriş Hareketleri</string>
    <string name="user_terms"><u>Kullanım Koşulları</u></string>
    <string name="privacy_policy"><u>Gizlilik Politikası</u></string>
    <string name="current_country">Bulunduğum Ülke:</string>
    <string name="permission_allow">İzin Ver</string>
    <string name="permission_deny">Şimdilik Reddet</string>
    <string name="notifications_title">Bildirimler</string>
    <string name="notifications_desc">Sistem mesajları.</string>
    <string name="flash_light">Flashı Aç</string>
    <string name="share">Paylaş</string>
    <string name="copy">Kopyala</string>
    <string name="use_scanned_id">Taranan IDyi Kullan</string>
    <string name="scan_result">Tarama Sonucu</string>
    <string name="qr_warning">Makinenin yanındaki KareKodu okutunuz.</string>
    <string name="privacy_title">Gizlilik</string>
    <string name="privacy_box_desc">Hesap durumu.</string>
    <string name="security_title">Güvenlik</string>
    <string name="security_desc">Parola, giriş aktiviteleri ve veriler.</string>
    <string name="fraud_title">Anti-Fraud</string>
    <string name="fraud_desc">Dolandırıcılık tespit analizi.</string>
    <string name="help_title">Yardım</string>
    <string name="help_desc">Bize ulaşın.</string>
    <string name="about_title">Hakkında</string>
    <string name="about_desc">Kullanım koşulları ve regülasyonlar.</string>
    <string name="warning">UYARI !</string>
    <string name="errorTitle">Hata !</string>
    <string name="enter_username">Kullanıcı Adı</string>
    <string name="enter_password">Şifre</string>
    <string name="enter_namesurname">İsim Soyisim</string>
    <string name="enter_mail">E-Posta</string>
    <string name="enter_phone">Telefon</string>
    <string name="enter_sirket">Şirket</string>
    <string name="searchbar_hint">Ticket ID</string>
    <string name="onboard_1_title_1">Bütüncül</string>
    <string name="onboard_1_title_2">Kontrol</string>
    <string name="onboard_1_desc">ÖnderGrup çatısı altındaki ürünlerinizi ve ürünlerle yetkili tüm alt kullanıcıları uygulama üzerinden kontrol edebilirsiniz.</string>
    <string name="onboard_2_title_1">ESP</string>
    <string name="onboard_2_title_2">Yönetimi</string>
    <string name="onboard_2_desc">Satın almış olduğunuz tüm ESP cihazlarınızı tek bir platformdan kontrol edebilirsiniz.</string>
    <string name="onboard_3_title_1">CSP-D</string>
    <string name="onboard_3_title_2">Yönetimi</string>
    <string name="onboard_3_desc">Satın almış olduğunuz tüm CSP-D cihazlarınızı tek bir platformdan kontrol edebilirsiniz.</string>
    <string name="resetPass">Şİfrenİ\nSıfırla</string>
    <string name="forget_password_detail">Şifrenizi sıfırlamak istediğiniz hesabın kullanıcı adını girin</string>
    <string name="make_selection">Seçİmİnİ Yap</string>
    <string name="make_selection_detail">Lütfen şifreni sıfırlamak istediğin yönetmi seç</string>
    <string name="via_sms">SMS ile Sıfırla</string>
    <string name="via_sms_detail">Telefonuna gelecek kod ile şifreni sıfırlayabilirsin.</string>
    <string name="via_mail">E-Posta ile Sıfırla</string>
    <string name="via_mail_detail">E-Postana gelecek kod ile şifreni sıfırlayabilirsin.</string>
    <string name="otp_code_text">On\nay</string>
    <string name="otp_verification_text">Doğrulama Aşaması</string>
    <string name="otp_description_text">Seçtiğiniz doğrulama yöntemine gelen onay kodunu girin</string>
    <string name="new_credentials">Yenİ Şİfren</string>
    <string name="new_credentials_detail">Eski şifrenden farklı bir şifre belirleyerek aşağıdaki alana yazabilirsin</string>
    <string name="new_credentials_2">Yeni Şifren</string>
    <string name="new_credentials_2_repeat">Şifreni Doğrula</string>
    <string name="new_credentials_reset">Sıfırla</string>
    <string name="password_updated">BAŞARILI</string>
    <string name="password_updated_success_message">Tebrikler şifren değiştirildi. Artık yeni şifren ile giriş yapabilirsin.</string>
    <string name="machine_data_null">Data Yok</string>
    <string name="lang_turkish">Türkçe</string>
    <string name="lang_english">İngilizce</string>
    <string name="machine_active">Aktif</string>
    <string name="machine_deactive">Aktif Değil</string>
    <string name="machine_owner">Sahibi: </string>
    <string name="machine_id">Makine ID: </string>
    <string name="machine_cycle">Cycle: </string>
    <string name="machine_language">Dil: </string>
    <string name="active_language">Dil: </string>
    <string name="time">sn.</string>
    <string name="error_code_1">1. Hata Kodu</string>
    <string name="error_code_2">2. Hata Kodu</string>
    <string name="error_code_3">3. Hata Kodu</string>
    <string name="error_code_4">4. Hata Kodu</string>
    <string name="error_code_5">5. Hata Kodu</string>
    <string name="error_code_6">6. Hata Kodu</string>
    <string name="error_code_7">7. Hata Kodu</string>
    <string name="error_code_8">8. Hata Kodu</string>
    <string name="error_code_9">9. Hata Kodu</string>
    <string name="error_code_10">10. Hata Kodu</string>
    <string-array name="machineType" translatable="false">
        <item>ESP</item>
        <item>CSP</item>
    </string-array>
    <string name="machine_devirmeYuruyusSecim">devirmeYuruyusSecim</string>
    <string name="machine_calismaSekli">calismaSekli</string>
    <string name="machine_emniyetCercevesi">emniyetCercevesi</string>
    <string name="machine_yavaslamaLimit">yavaslamaLimit</string>
    <string name="machine_altLimit">altLimit</string>
    <string name="machine_kapiTablaAcKonum">kapiTablaAcKonum</string>
    <string name="machine_basincSalteri">basincSalteri</string>
    <string name="machine_kapiSecimleri">kapiSecimleri</string>
    <string name="machine_kapiAcTipi">kapiAcTipi</string>
    <string name="machine_kapi1Tip">kapi1Tip</string>
    <string name="machine_kapi1AcSure">kapi1AcSure</string>
    <string name="machine_kapi2Tip">kapi2Tip</string>
    <string name="machine_kapi2AcSure">kapi2AcSure</string>
    <string name="machine_kapitablaTip">kapitablaTip</string>
    <string name="machine_kapiTablaAcSure">kapiTablaAcSure</string>
    <string name="machine_yukariYavasLimit">yukariYavasLimit</string>
    <string name="machine_devirmeYukariIleriLimit">devirmeYukariIleriLimit</string>
    <string name="machine_devirmeAsagiGeriLimit">devirmeAsagiGeriLimit</string>
    <string name="machine_devirmeSilindirTipi">devirmeSilindirTipi</string>
    <string name="machine_platformSilindirTipi">platformSilindirTipi</string>
    <string name="machine_yukariValfTmr">yukariValfTmr</string>
    <string name="machine_asagiValfTmr">asagiValfTmr</string>
    <string name="machine_devirmeYukariIleriTmr">devirmeYukariIleriTmr</string>
    <string name="machine_devirmeAsagiGeriTmr">devirmeAsagiGeriTmr</string>
    <string name="machine_makineCalismaTmr">makineCalismaTmr</string>
    <string name="machine_buzzer">buzzer</string>
    <string name="machine_demoMode">demoMode</string>
    <string name="machine_dilSecim">dilSecim</string>
    <string name="machine_eepromData37">eepromData37</string>
    <string name="machine_eepromData38">eepromData38</string>
    <string name="machine_eepromData39">eepromData39</string>
    <string name="machine_eepromData40">eepromData40</string>
    <string name="machine_eepromData41">eepromData41</string>
    <string name="machine_eepromData42">eepromData42</string>
    <string name="machine_eepromData43">eepromData43</string>
    <string name="machine_eepromData44">eepromData44</string>
    <string name="machine_eepromData45">eepromData45</string>
    <string name="machine_eepromData46">eepromData46</string>
    <string name="machine_eepromData47">eepromData47</string>
    <string name="machine_lcdBacklightSure">lcdBacklightSure</string>
    <string name="hello_template">Merhaba\nHalil İbrahim Direktör</string>
    <string name="hello_prefix">Merhaba\n</string>
    <string name="subusers">Alt Kullanıcılar</string>
    <string name="hatalog">Hata Kayıtları</string>
    <string name="maintenance">Bakım Geçmişi</string>
    <string name="docs">Belgeler</string>
    <string name="mymachines">Makinelerim</string>
    <string name="allmachines">Tüm Makineler</string>
    <string name="allusers">Tüm Kullanıcılar</string>
    <string name="createmaintenance">Bakım Kaydı Oluştur</string>
    <string name="select_role">Lütfen Rol Seçin</string>
    <string name="role_update">Rolü Güncelle</string>
    <string name="changeowner">Sahibini Güncelle</string>
    <string name="documents_desc">İncelemek istediğin dokümanı aşağıdan seçebilirsin.</string>
    <string name="user_manual">Kullanma Kılavuzu</string>
    <string name="user_manual_desc">ESP ve CSP-D makineleriniz için kullanma kılavuzuna ulaşın.</string>
    <string name="kvkk">KVKK Politikası</string>
    <string name="kvkk_desc">KVKK politikamızı bu butonu kullanarak inceleyebilirsiniz.</string>
    <string name="privacy">Gizlilik Politikası</string>
    <string name="subuser_create">Alt Kullanıcı \nOluştur</string>
    <string name="subuser_create_button">Oluştur</string>
    <string name="support_desc">Lütfen bizimle kurmak istediğin irtibat yöntemini seç.</string>
    <string name="support_location">Konum</string>
    <string name="support_location_desc">Fabrika ve Showroom adreslerine bakabilirsin.</string>
    <string name="support_mail">E-Posta Gönder</string>
    <string name="support_mail_desc">E-Posta aracılığıyla destek alabilirsiniz.</string>
    <string name="support_call">Bizi Ara</string>
    <string name="support_call_desc">Bizi arayarak destek alabilirsiniz.</string>
    <string name="incharge">Sorumlu Yetkili: </string>
    <string name="maintenance_id">Bakım Numarası: </string>
    <string name="maintenance_date">Bakım Tarihi: </string>
    <string name="create_ticket">Destek Talebi Aç</string>
    <string name="all_tickets">Tümü</string>
    <string name="open_tickets">Aktif</string>
    <string name="pending_tickets">Bekleyen</string>
    <string name="resolved_tickets">Çözülen</string>
    <string name="ticket_desc">Sorununuzu detaylıca anlatın lütfen.</string>
    <string name="ticket_title">Destek Talebi Başlığı</string>
</resources>