<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/ticketTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ticket_title" />

    <Spinner
        android:id="@+id/ticketSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/ticket_subjects" />

    <EditText
        android:id="@+id/ticketDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ticket_desc"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/createTicketButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/create_ticket" />
</LinearLayout>