<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/maintenanceIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ikon_maintenancelog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/incharge_technician"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incharge"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/maintenance_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/maintenance_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_id"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
