<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.Screens.SubUser.SubUserAddScreen"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:windowSoftInputMode="adjustResize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:src="@drawable/ikon_back"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/subuser_create"
                android:textColor="@color/atlaTextColor"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNameSurname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ikon_name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_namesurname"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="#756C6C" />

            <EditText
                android:id="@+id/editTextNickname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ikon_kullaniciadi"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_username"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="#756C6C" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ikon_password"
                android:drawableEnd="@drawable/ikon_passshow"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="#756C6C" />

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ikon_email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_mail"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="#756C6C" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ikon_phone"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:padding="8dp"
                android:textColorHint="#756C6C" />

            <EditText
                android:id="@+id/editTextCompany"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ikon_sirket"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/enter_sirket"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="#756C6C" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/subuser_create_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/button_main"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>