<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ikon_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_tickets"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/raleway_bold"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">
        <com.google.android.material.search.SearchBar
            android:theme="@style/Theme.Material3.DynamicColors.DayNight.NoActionBar"
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchbar_hint"
            app:backgroundTint="@color/checkBoxColor"
            app:navigationIcon="@drawable/ikon_search"
            app:placeholderText="@string/searchbar_hint" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/allTickets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_ticket"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/all_tickets"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginEnd="2dp"
                android:shadowColor="@android:color/transparent"/>
            <Button
                android:id="@+id/openTickets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_ticket"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/open_tickets"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginEnd="2dp"
                android:shadowColor="@android:color/transparent"/>
            <Button
                android:id="@+id/pendingTickets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_ticket"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/pending_tickets"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginEnd="2dp"
                android:shadowColor="@android:color/transparent"/>
            <Button
                android:id="@+id/resolvedTickets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/button_ticket"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/resolved_tickets"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginEnd="2dp"
                android:shadowColor="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/searchSection"
        app:layout_constraintBottom_toTopOf="@+id/createTicketButton"/>

    <Button
        android:id="@+id/createTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_ticket"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="12sp"
        android:background="@drawable/button_main_success"
        android:padding="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>