<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:padding="30dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="85dp">

            <TextView
                android:id="@+id/make_selection_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/make_selection"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="35sp" />


            <TextView
                android:id="@+id/make_selection_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/support_desc"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <RelativeLayout
                android:id="@+id/make_selection_sms_box"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="50dp"
                android:background="@color/lightWhite"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/mobile_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ikon_map" />


                <TextView
                    android:id="@+id/mobile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_toEndOf="@id/mobile_icon"
                    android:fontFamily="@font/muli"
                    android:text="@string/support_location"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/mobile_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mobile_title"
                    android:layout_toEndOf="@id/mobile_icon"
                    android:fontFamily="@font/muli"
                    android:text="@string/support_location_desc"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/mapButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/make_selection_mail_box"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightWhite"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/mail_icon"
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ikon_mailus" />


                <TextView
                    android:id="@+id/mail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_toEndOf="@id/mail_icon"
                    android:fontFamily="@font/muli"
                    android:text="@string/support_mail"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/mail_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mail_title"
                    android:layout_toEndOf="@id/mail_icon"
                    android:fontFamily="@font/muli"
                    android:text="@string/support_mail_desc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/mailButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/make_selection_call"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightWhite"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/call_icon"
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ikon_call" />


                <TextView
                    android:id="@+id/call_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_toEndOf="@id/call_icon"
                    android:fontFamily="@font/muli"
                    android:text="@string/support_call"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/call_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/call_title"
                    android:layout_toEndOf="@id/call_icon"
                    android:fontFamily="@font/muli"
                    android:text="@string/support_call_desc"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/callButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:padding="10dp">
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>